--- a/homeotto.html
+++ b/homeotto.html
@@ -10,9 +10,14 @@
   <link rel="stylesheet" href="css/bootstrap-lite.css">
   <link rel="stylesheet" href="css/style.css?v=1">
   <link rel="stylesheet" href="css/header.css?v=1">
-  <link rel="stylesheet" href="css/card.css?v=1.css">
+  <link rel="stylesheet" href="css/card?v=1.css">
   <link rel="stylesheet" href="css/custom.css?v=1">
   <link rel="stylesheet" href="css/fontawesome.all.min.css">
+
+  <link rel="stylesheet" href="css/owl.carousel.min.css" />
+  <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+  <script src="js/owl.carousel.min.js"></script>
+  
   <script src="js/header.js" defer></script>
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="shortcut icon" href="images/me_Oct2019_SqSmGry.jpg?v=1" type="image/jpg" sizes="16x16 32x32 64x64">
@@ -23,10 +28,33 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:creator" content="@wade_yeg" />
   <meta property=”og:type” content=”website” />
-  <meta property="og:url" content="https://wade-wws.github.io/index.html" />
+  <meta property="og:url" content="https://wade-wws.github.io/projects.html" />
   <meta property="og:title"  content="Wade Smith - Business Solutions Developer" />
   <meta property="og:description" content="Creative solutions to your most difficult problems." />
-  <meta property="og:image" content="https://wade-wws.github.io/images/HomeScreen_OG.jpg" />
+  <meta property="og:image" content="https://wade-wws.github.io/images/HomeScreen_OG.jpg" /> 
+
+  <script>
+    $(document).ready(function() {
+      var owl = $('.owl-carousel');
+          owl.owlCarousel({
+            items: 1,
+            loop:true,
+            margin:0,
+            nav:true,
+            autoplay:true,
+            autoplayTimeout:8000,
+            autoplayHoverPause:true,
+            smartSpeed:700,
+            dots:true
+          });
+        $('.owl-NextBtn').click(function() {
+          owl.trigger('next.owl.carousel');
+        })
+        $('.owl-PrevBtn').click(function() {
+          owl.trigger('prev.owl.carousel');
+        })
+    });
+  </script>
 </head>
 <body>
   
@@ -50,7 +78,7 @@
             </div>
           </div>
           <ul class="nav">
-            <li class="navitem active">
+            <li class="navitem">
               <a title="home" href="index.html">
                 <i class="fas icon fa-home"></i>
                 <label for="">Home</label>
@@ -83,107 +111,127 @@
 
   <!-- hero section -->
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-12 hero-section">
-        <div class="hero-Text container">
-          <div class="profile-img circle"></div>
+    <div class="row justify-content-center">
+      <div class="col-12 hero-section homeotto smVer">
+        <div class="hero-Text clrwht container align-center">
           <div class="profile-text">
-            <h1>
-              Hi, I'm<br>
-              Wade Smith
-            </h1><br>
-            <h3>Business Solutions Developer</h3>
+            <h1>Home Otto</h1>
           </div>
         </div>
-        <div class="hero-Image laptop"></div>
+        <div class="hero-Image portfolio"></div>
       </div>
     </div>
   </div>
-  <br><br>
-
-  <!-- services -->
-  <div class="container notes-section">
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-3 align-center">
-        <i class="fas fa-tag"></i><br>
-        <h3>Branding</h3><br>
-        <p>
-          Marketing sites to establish and sell your brand; 
-          leveraging tools such as video, streaming, and chat.
-        </p>
-      </div>
-      <div class="col-12 col-md-3 align-center">
-        <i class="fas fa-cogs"></i><br>
-        <h3>Application</h3><br>
-        <p>
-          Develop mobile and web apps using data driven architecture,
-          and fast deployments with hot code push.
-        </p>
-      </div>
-      <div class="col-12 col-md-3 align-center">
-        <i class="fas fa-sitemap"></i><br>
-        <h3>Infrastruction</h3><br>
-        <p>
-          Integration of modern platforms and APIs into your new or existing ecosystem.
-        </p>
-      </div>
-    </div>
-
-    <div class="row justify-content-center">
-      <div class="col-12 col-md-3 align-center">
-        <i class="fas fa-magic"></i><br>
-        <h3>Automation</h3><br>
-        <p>
-          Translate your operations into business logic to automate repeative tasks
-          and grow your business.
-        </p>
-      </div>
-      <div class="col-12 col-md-3 align-center">
-        <i class="far fa-eye"></i><br>
-        <h3>Transparency</h3><br>
-        <p>
-          Give your clients a view into your company and allow them to track their own orders.
-        </p>
-      </div>
-      <div class="col-12 col-md-3 align-center">
-        <i class="fas fa-pencil-ruler"></i><br>
-        <h3>Visuals</h3><br>
-        <p>
-          Develop custom imaging systems to present your products and services in full detail.
-        </p>
-      </div>
-    </div>
-
-  </div>
-  <br><br>
-
-
-  <!-- services -->
+  
   <div class="container">
-    <div class="col-12 align-center">
-      <br><br><br class="d-none d-md-block">
-      <h1 class="clrpri bold">Portfolio</h1>
-      <br><br><hr><br>
+
+    <!-- home otto -->
+    <div class="row homeotto">
+      <div class="col-12 align-center">
+        <br><br><br class="d-none d-md-block">
+        <h1 class="clrpri bold">Highlights</h1>
+        <br><br><hr><br>
+      </div>
+      <div class="col-12 owl-carousel screen-shot owl-theme">
+
+        <!-- features -->
+        <div class="item blank">
+          <div class="row justify-content-center">
+            <div class="col-11 align-center">
+              <br><br class="d-none d-md-block">
+              <h4>A complete end-to-end home automation kit for new home owners.</h4>
+              <br>
+            </div>
+            <div class="col-11 col-md-8 col-lg-4">
+              <br><br class="d-none d-md-block">
+              <h3 class="clrpri bold">Description</h3>
+              <hr>
+              <h5>
+                Home Otto is a a complete package of home automation products for builders to 
+                pre-install into new home builds.
+              </h5>
+            </div>
+            <div class="col-11 col-md-8 col-lg-4">
+              <br><br class="d-none d-md-block">
+              <h3 class="clrpri bold">Key features</h3>
+              <hr>
+              <ul class="h5">
+                <li>Mobile app for home owners with thier new home</li>
+                <li>Just one account for all your automation devices</li>
+                <li>Zero setup, ready to use minute one</li>
+                <li>Uses geofences to know when your home or away</li>
+                <li>Set anything with you voice with Amazon Alexa</li>
+                <li>Real-time changes, no delays</li>
+                <li>Built for iOS, Android, and Amazon Alexa</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <!-- Apps -->
+        <div class="item img01">
+          <div class="text-bottom-left">
+            <h3 class="clrpri bold">Mobile / Voice app</h3>
+            <hr>
+            <ul class="h5">
+              <li>Available on iOS, Android, and Amazon Alexa</li>
+              <li>Hybrid app that updates without new store releases</li>
+              <li>Real-time changes from app to home</li>
+              <li>Inegration with location and notification services </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Marketing -->
+        <div class="item img02">
+          <div class="text-bottom-left">
+            <h3 class="clrpri bold">Marketing site</h3>
+            <hr>
+            <ul class="h5">
+              <li>Full details for new home owners to learn from</li>
+              <li>Builder are redirected to Build Otto for those looking for automation solutions.</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Tour -->
+        <div class="item img03">
+          <div class="text-bottom-left">
+            <h3 class="clrpri bold">App Tour</h3>
+            <hr>
+            <ul class="h5">
+              <li>A guided tour of the app and its features</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Products -->
+        <div class="item img04">
+          <div class="text-bottom-left">
+            <h3 class="clrpri bold">Product Pages</h3>
+            <hr>
+            <ul class="h5">
+              <li>Short video guide on each of peice of hardware</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Security -->
+        <div class="item img05">
+          <div class="text-bottom-left">
+            <h3 class="clrpri bold">Self-managed security</h3>
+            <hr>
+            <ul class="h5">
+              <li>No monthly fees, all self-managed home security</li>
+              <li>Mobile location services identifies when no one is home and automatically locks the home</li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
     </div>
-    <div class="row justify-content-center porfolio-grid">
+    <!-- homeotto end -->
 
-      <div class="col-12 col-md-4 align-center">
-        <a class="zeotec" href="zeotec.html">Zeotec</a>
-      </div>
-
-      <div class="col-12 col-md-4 align-center">
-        <a class="homeotto" href="homeotto.html">Home Otto</a>
-      </div>
-
-      <div class="col-12 col-md-4 align-center">
-        <a class="buildotto" href="buildotto.html">Build Otto</a>
-      </div>
-
-      <div class="col-12 col-md-4 align-center">
-        <a class="pgw" href="pgw.html">Photo Gift World</a>
-      </div>
-
-    </div>
   </div>
 
   <!-- footer -->
